asg/tests/pass/array/input_tuple_3x2.leo
function main(a: [u8; (3, 2)]) {
    console.assert(a == [0u8; (3, 2)]);
}
