asg/tests/fail/array/multi_initializer_fail.leo
function main() {
    const arr: [u8; (2, 2)] = [1u8; (2, 1)]; // incorrect dimensions
}